--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "cookie-parser": "^1.3.5",
     "ejs": "2.3.1",
     "express": "4.12.3",
+    "iconv-lite": "^0.4.13",
     "leanengine": "^1.0.0-beta",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "urlencode2": "^1.0.1"
   },
   "engines": {
     "node": "4.x"
